--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Angular Market Redux</title>
 </head>
-<body>
+<body ng-app="marketJs">
+    <ui-view></ui-view>
 
+    <script src="build/bundle.js"></script>
 </body>
 </html>
