--- a/app/pages/admin-products.html
+++ b/app/pages/admin-products.html
@@ -1,3 +1,12 @@
 <h4>Products</h4>
+<div style="height: 70px" class="row">
 
-<product-table></product-table>
+</div>
+<div class="row">
+    <div class="col-md-5 col-md-offset-1">
+        <product-table></product-table>
+    </div>
+    <div class="col-md-4 col-md-offset-1">
+        <selected-product-form></selected-product-form>
+    </div>
+</div>
