--- a/app/modules/market/pages/market-showcase.html
+++ b/app/modules/market/pages/market-showcase.html
@@ -6,7 +6,7 @@
     <div class="col-md-4 col-md-offset-1">
         <div class="row">
             <h4>Your cart:</h4>
-            <cart></cart>
+            <showcase-cart></showcase-cart>
         </div>
     </div>
 </div>
